# OpenFaceTracker

./: .gitignore  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PreLoad.cmake  README.md
appsrc/: console.cpp  console.hpp  main.cpp
data/: config.json
doc/: Doxyfile.in
libsrc/: CMakeLists.txt
libsrc/include/oft/: backend.hpp  defs.hpp  directory.hpp  explorer.hpp  facialdetection.hpp  facialrecognition.hpp  file.hpp  globalanalysis.hpp  handlerdraw.hpp  handlerjson.hpp  handlerlog.hpp  labcollector.hpp  sha256.hpp  toolsbox.hpp
libsrc/src/: backend.cpp  directory.cpp  explorer.cpp  facialdetection.cpp  facialrecognition.cpp  file.cpp  globalanalysis.cpp  handlerdraw.cpp  handlerjson.cpp  handlerlog.cpp  labcollector.cpp  sha256.cpp  toolsbox.cpp
scripts/: README.md  configure.sh  erreurs_installation_oft.odt  install.sh  installation.ps1
